<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.szkoleniaandroid.billexpert.features.bills.BillsActivity">


    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_save"
        android:title="@string/export_to_csv"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_admin"
        android:title="Admin panel"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
