<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="pl.szkoleniaandroid.billexpert.features.billdetails.BillDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".RecipeActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/begin"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_text_view"
                dateToDisplay="@{model.date}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:drawableStart="@drawable/icon_pick_date"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:hint="@string/purchase_date"
                android:onClick="@{()->model.pickDateClicked()}"
                tools:text="30/12/2018" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            error="@{model.nameError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/begin"
            app:layout_constraintTop_toBottomOf="@id/date_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_receipt"
                android:drawablePadding="8dp"
                android:hint="@string/bill_name"
                android:text="@={model.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            error="@{model.amountError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/begin"
            app:layout_constraintTop_toBottomOf="@id/name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_money"
                android:drawablePadding="8dp"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:text="@={model.amount}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/begin"
            app:layout_constraintTop_toBottomOf="@id/amount_input_layout" />


        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:entries="@{model.categories}"
            android:selectedItemPosition="@={model.selectedCategoryIndex}"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/begin"
            app:layout_constraintTop_toBottomOf="@id/category_label"
            tools:listitem="@android:layout/simple_list_item_1" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/add_coment_check_box"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="@={model.hasComment}"
            android:text="@string/has_comment"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/begin"
            app:layout_constraintTop_toBottomOf="@id/category_spinner" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comment_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="@{addComentCheckBox.checked ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/begin"
            app:layout_constraintTop_toBottomOf="@id/add_coment_check_box">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comment_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment"
                android:text="@={model.comment}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()->model.saveClicked()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/end"
            app:layout_constraintStart_toStartOf="@id/begin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
